--- a/scroll3/03-style.css
+++ b/scroll3/03-style.css
@@ -11,6 +11,7 @@ section {
   flex-direction: column;
   min-height: 100vh;
   background: black;
+  overflow-x: hidden;
 }
 
 h1 {
@@ -22,6 +23,39 @@ p {
   font-size: 35px;
   color: blueviolet;
   font-weight: 600;
+}
+
+section .animate {
+  filter: blur(5px);
+  transition: 1s;
+}
+
+section.show-animate .animate {
+  filter: blur(0);
+}
+
+.sec-1 .animate {
+  transform: translateX(-100%);
+}
+
+.sec-1.show-animate .animate {
+  transform: translateX(0);
+}
+
+.sec-2 .animate {
+  transform: translateX(100%);
+}
+
+.sec-2.show-animate .animate {
+  transform: translateX(0);
+}
+
+.sec-3 .animate {
+  transform: scale(0.5);
+}
+
+.sec-3.show-animate .animate {
+  transform: scale(1);
 }
 
 .sec-2 p {
